<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eMenu</string>
    <string name="about">About</string>
    <string name="category">Category</string>
    <string name="myOrder">MyOrder</string>
    <string name="language">Language</string>
    <string name="title_activity_dish_detail">DishDetail</string>
    <string name="title_activity_dish_list">DishList</string>
    <string name="action_settings">Settings</string>
    <string name="btnAdd">Add</string>

    <!-- Cover -->
    <string name="lanEnglish">English</string>
    <string name="lanChinese">中文</string>
    <string name="lanSwedish">Svensk</string>
    <!-- End of Cover -->


    <!-- Main -->
    <string name="speListTitle">Recommended Dishes</string>
    <string name="ctListTitle">Category List</string>
    <!-- End of Main -->


    <!-- header of the favorite list -->
    <string name="favorite_hd_sn">No.</string>
    <string name="favorite_hd_dishName">Dish</string>
    <string name="favorite_hd_price">Price(kr)</string>
    <string name="favorite_hd_amount">Count</string>
    <string name="favorite_hd_sum">Sum(kr)</string>
    <!-- end of header -->


    <!-- order list -->
    <string name="title_activity_favorite_list">MyOrder</string>
    <string name="btnCancle">Cancle</string>
    <string name="btnHis">History</string>
    <string name="btnSubmit">Submit</string>
    <!-- end of order list -->


    <!-- order history -->
    <string name="title_activity_order_his">Order History</string>
    <string name="btnPrevious">Previous</string>
    <string name="btnNext">Next</string>
    <!-- end of order list -->

    <string name="aboutContent">Version: V1.1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cover">Cover</string>

</resources>