<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteList" >

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/hd_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_hd_sn" />

        <TextView
            android:id="@+id/hd_dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_hd_dishName" />

        <TextView
            android:id="@+id/hd_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_hd_price" />

        <TextView
            android:id="@+id/hd_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_hd_amount" />

        <TextView
            android:id="@+id/hd_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_hd_sum" />
    </LinearLayout>

    <ListView
        android:id="@+id/favoriteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1" >
    </ListView>

</RelativeLayout>