<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coverLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Cover" >

    <Button
        android:id="@+id/btnChinese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnEnglish"
        android:layout_alignBottom="@+id/btnEnglish"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/btnEnglish"
        android:text="@string/lanChinese"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btnSwedish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnChinese"
        android:layout_alignBottom="@+id/btnChinese"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@+id/btnChinese"
        android:text="@string/lanSwedish"
        android:textSize="50sp" />

    <Button
        android:id="@+id/btnEnglish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="430dp"
        android:text="@string/lanEnglish"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/rstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="110dp"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="60sp" />

</RelativeLayout>